<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".flow.note.layout.NoteDetailFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteDetail_title_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteDetail_title_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/noteDetail_title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteDetail_content_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/noteDetail_title_til"
        app:layout_constraintStart_toStartOf="@+id/noteDetail_title_til"
        app:layout_constraintTop_toBottomOf="@+id/noteDetail_title_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteDetail_content_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/noteDetail_description_hint"
            android:inputType="textLongMessage"
            android:lines="4"
            android:maxLines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/noteDetail_delete_btn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/noteDetail_delete_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/noteDetail_save_btn"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noteDetail_save_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/noteDetail_delete_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/noteDetail_progressbar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>