...
    android:id="@+id/notes_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".flow.notes.layout.NotesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_notes_rec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_note"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/notes_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/notes_addNote_btn_description"
...
